--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
@@ -1,3 +1,28 @@
 <div class="contenedorPantalla">
-  <p>gestion-sucursal works!</p>
+  <div class="contenerDeInformacion">
+      <div class="row">
+        <div class="col columna1">
+          <img src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg">
+        </div>
+        <div class="col columna2">
+          <div class="row"><h5>Nombre de la sucursal</h5></div>
+          <div class="row"><label>Dirrecion</label></div>
+          <div class="row"><label>Fecha de Apertura</label></div>
+          <div class="row"><label>Horario de Atencion</label></div>
+          <div class="row"><label>Empleado Administrador</label></div>
+        </div>
+        <div class="col columna3">
+          <div class="row">Column</div>
+          <div class="row">Column</div>
+        </div>
+        <div class="col columna4">
+          <div class="row">Column</div>
+          <div class="row">Column</div>
+        </div>
+        <div class="col columna4">
+          <div class="row">Column</div>
+          <div class="row">Column</div>
+        </div>
+      </div>
+    </div>
 </div>
