Varias  vistas terminadas

--- a/FrontEnd/src/app/Administrador/navbar/navbar.component.html
+++ b/FrontEnd/src/app/Administrador/navbar/navbar.component.html
@@ -17,13 +17,8 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active btn">Gestion de Spa</a>
+            <a class="nav-link active btn" (click)="navigate('GestionSpa')">Gestion de Tratamiendo del Spa</a>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link active btn">Gestion de servicios</a>
-          </li>
-
 
 
           <li class="nav-item dropdown">
@@ -31,13 +26,13 @@
               Planilla
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <li><a class="dropdown-item btn" >Gestión de puestos</a></li>
+              <li><a class="dropdown-item btn" (click)="navigate('GestionPuestos')" >Gestión de puestos</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item btn" >Gestión de tipos de planilla</a></li>
+              <li><a class="dropdown-item btn" (click)="navigate('GestionPlanilla')" >Gestión de tipos de planilla</a></li>
               <li><hr class="dropdown-divider btn"></li>
-              <li><a class="dropdown-item btn" >Gestión de empleados</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item btn" >Generación de planilla</a></li>
+              <li><a class="dropdown-item btn" (click)="navigate('GestionEmpleados')">Gestión de empleados </a></li>
+              <li><hr class="dropdown-divider" ></li>
+              <li><a class="dropdown-item btn" (click)="navigate('GeneracionPlanilla')">Generación de planilla</a></li>
             </ul>
           </li>
 
@@ -68,14 +63,13 @@
               <li><a class="dropdown-item btn" >Crear clases</a></li>
             </ul>
           </li>
-          <form class="d-flex">
-            <button class="btn posicion " type="submit">
-              Salir
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+          <button class="btn btnSalir">
+            Salir
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
               <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-            </svg></button>
-          </form>
+            </svg>
+          </button>
         </ul>
       </div>
     </div>
