--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.css
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.css
@@ -3,13 +3,39 @@
   margin-top: 5vh;
   width: 70%;
   height: 16vh;
-  background: wheat;
 }
 
+.container{
+  margin-top: 5vh;
+  background: #641303;
+  color: white;
+  padding: 20px;
+  border-radius: 20px
+;
+}
 img {
   width: 230px;
 }
 
-.columna1{
+.image2{
+  width: 150px;
+}
+
+.tamano{
+  width: 50px;
+  height: 25px;
+  margin-left: 170px;
+}
+.btn2{
+  margin-top: 80px;
+  border-radius: 5px;
+
+}
+
+.largo{
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 10px;
+  border-radius: 20px;
 }
 
