--- a/FrontEndCliente/src/app/Componentes/login/login.component.css
+++ b/FrontEndCliente/src/app/Componentes/login/login.component.css
@@ -1,66 +1,127 @@
-/*author:starttemplate*/
-/*reference site : starttemplate.com*/
-html, body {
+body,html{
+  /* background-color: #E01F28; */
   margin: 0;
   min-height: 100vh ;
-  background-image:url('https://michaelhermann.com.au/wp-content/uploads/2018/03/wallpaper.wiki-HD-Free-Exercise-Backgrounds-PIC-WPB005918.jpg');
+  background-image:url("/assets/fondoGymTEC-01.svg");
   background-position:center;
   background-size:cover;
 
   -webkit-font-smoothing: antialiased;
-  font: normal 14px Oswald,arial,sans-serif;
-}
-.logo{
-  width: 20%;
-  margin-left: 75%;
-
 }
 
-.container {
-  padding-top: 20%;
+h6, h5, h4, h3, h2, h1, p{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align: center;
+  color: white ;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #ffffff!important;
-  opacity: 1; /* Firefox */
-  font-size:18px!important;
-}
-.form-login {
-  background-color: rgba(0,0,0,0.55);
+p{
+  text-align: left;
+  width: 75%;
+  margin-left: 12.5%;
+  margin-top: 5%;
+  border-top: solid;
   padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 15px;
-  border-color:#d2d2d2;
-  border-width: 5px;
-  color:white;
-  box-shadow:0 1px 0 #cfcfcf;
-}
-.form-control{
-  background:transparent!important;
-  color: #ffffff !important;
-  font-size: 18px!important;
-}
-h1{
-  color:white!important;
-}
-h4 {
-  border:0 solid #fff;
-  border-bottom-width:1px;
-  padding-bottom:10px;
-  text-align: center;
+  border-top-width: 2px;
+  border-top-color: #293233;
+  color: #293233;
+  font-size: 12px;
 }
 
-.form-control {
-  border-radius: 10px;
+
+input{
+  border:none;
+  background-color: transparent;
+  color: #293233 ;
+  font:  12px Georgia, 'Times New Roman', Times, serif;
 }
-.text-white{
-  color: white!important;
+
+input::placeholder{
+  color: #293233 ;
 }
-.wrapper {
-  text-align: center;
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    background-color: transparent;
+    border: transparent;
+    outline: transparent;
+
 }
-.footer p{
-  font-size: 18px;
+
+.container{
+  /* background-color: rgba(255, 255, 255, 1); */
+  background: linear-gradient(45deg, #ee9542   , #d47318  );
+  position: absolute;
+  top: 25%;
+  right: 25%;
+  height: 50%;
+  width: 50%;
+  padding: 3%;
+  border-radius: 50px;
+  box-shadow: 1px 8px 8px 0px rgba(196, 206, 141, 0.3);
+}
+
+.input-group{
+  border-color:transparent ;
+  border-radius: 30px;
+  padding: 5px;
+  margin: 20px;
+  background: linear-gradient(45deg, #d9f0e6   , #daffef   ) ;
+  color: #293233;
+  box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
+  width: 75%;
+
+}
+
+button {
+  border-color:transparent ;
+  border-radius: 30px;
+  padding: 5px;
+  margin: 20px;
+  background: linear-gradient(65deg, #d8353d   , #f04b53   ) ;
+  color: #293233;
+  box-shadow: 1px 8px 8px 0px rgba(31, 57, 58, 0.5);
+  width: 75%;
+}
+
+.marginLeft{
+  margin-left: 5%;
+  color: #293233;
+  padding-bottom: 2%;
+  font-size: 15px
+}
+
+.marginRight{
+  margin-right: 5%;
+  color: #293233;
+  padding-bottom: 2%;
+  font-size: 15px
+}
+
+.marginRight:hover{
+  color: #F5881F;
+}
+
+.logo{
+  margin-top:5%;
+  width: 45%;
+  margin-left: 27.5%;
+}
+
+.InfoContainer{
+  position: absolute;
+    background: linear-gradient(45deg, #C4CE8D   , #535831  ) ;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-left-style: solid;
+    border-left-width: 10px;
+    border-left-color: #1F393A;
+    /*dim the background*/
+    top:0;
+    left:50%;
+    width:50%;
+    height:100%;
+  
 }
