--- a/FrontEnd/src/app/Administrador/gestion-inventario/gestion-inventario.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-inventario/gestion-inventario.component.html
@@ -64,7 +64,7 @@
             <select class="form-select" id="tipo" name="6" required="">
               <optgroup label="">
                 <option> </option>
-              </optgroup>y
+              </optgroup>
             </select>
           </div>
 
