--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.html
@@ -40,11 +40,11 @@
               </svg>
             </button>
           </div>
-          <div class="row btn2">
-            <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#CopiarSucursal">Copiar Sucursal</button>
+          <div class="row">
+            <button class="btn btn-dark btn2" data-bs-toggle="modal" data-bs-target="#CopiarSucursal">Copiar Sucursal</button>
+            <button class="btn btn-dark btn3" data-bs-toggle="modal" data-bs-target="#EliminarSucursal">Eliminar Sucursal</button>
           </div>
         </div>
-
       </div>
     </div>
 </div>
