--- a/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.css
+++ b/FrontEnd/src/app/Administrador/gestion-sucursal/gestion-sucursal.component.css
@@ -27,7 +27,11 @@ img {
   margin-left: 170px;
 }
 .btn2{
-  margin-top: 80px;
+  margin-top: 70px;
+  border-radius: 5px;
+}
+.btn3{
+  margin-top: 5px;
   border-radius: 5px;
 
 }
