--- a/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
+++ b/FrontEndCliente/src/app/inicio-cliente/inicio-cliente.component.html
@@ -18,7 +18,7 @@
 
       <form >
         <div class="form-group">
-          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre de clase">
+          <input type="text" class="form-control" id="nombreClaseBusqueda" placeholder="Nombre de clase">
         </div>
         <div class="form-group" >
           <label for="exampleFormControlSelect1">Sucursal:</label>
