--- a/FrontEnd/src/app/Administrador/gestion-spa/gestion-spa.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-spa/gestion-spa.component.html
@@ -1,17 +1,19 @@
 <button class="btn btn-dark largo" data-bs-toggle="modal" data-bs-target="#crearTratamiento">Agregar un nuevo tratamiento al SPA</button>
 <div class="container row">
 
-  <div class="col margnes">
+  <div class="col margnes" *ngFor="let item of listaTratamientos">
     <div class="card" style="width: 18rem;">
-      <img src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg">
+      <img src="{{item.imagen}}">
       <div class="card-body">
-        <h2 class="card-title">Nombre</h2>
-        <label class="row letras">Identificador</label>
+        <h2 class="card-title">Nombre: {{item.nombre}}</h2>
+        <label class="row letras">Identificador {{item.id}}</label>
       </div>
       <div class="card-footer">
 
-        <button class="btn btn-primary margen" data-bs-toggle="modal" data-bs-target="#editarTratamiento">Editar</button>
-        <button class="btn btn-danger margen" data-bs-toggle="modal" data-bs-target="#eliminarTratamiento" >Eliminar</button>
+        <button class="btn btn-primary margen" data-bs-toggle="modal" data-bs-target="#editarTratamiento"
+                (click)="obtenerInformacionItem(item)">Editar</button>
+        <button class="btn btn-danger margen" data-bs-toggle="modal" data-bs-target="#eliminarTratamiento"
+                (click)="obtenerInformacionItem(item)">Eliminar</button>
       </div>
     </div>
   </div>
@@ -29,17 +31,19 @@
 
         <div class="tamano3">
           <label>Imagen del Tratamiento:</label>
-          <input type="text" class="form-control" name="nombre" id="imageTratamiento" required="">
+          <input type="text" class="form-control" name="nombre" id="imageTratamiento" required=""
+                 #imagen="ngModel" [(ngModel)]="tratamiento.imagen">
         </div>
 
         <div class="tamano3">
           <label>Nombre Tratamiento:</label>
-          <input type="text" class="form-control" name="nombre" id="imagenSucursal1" required="">
+          <input type="text" class="form-control" name="nombre" id="imagenSucursal1" required=""
+                 #nombre="ngModel" [(ngModel)]="tratamiento.nombre">
         </div>
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="creaTratamiento(tratamiento)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
@@ -59,17 +63,19 @@
 
         <div class="tamano3">
           <label>Imagen del Tratamiento:</label>
-          <input type="text" class="form-control" name="nombre" id="EditarimageTratamiento" required="">
+          <input type="text" class="form-control" name="nombre" id="EditarimageTratamiento" required=""
+                 #imagen="ngModel" [(ngModel)]="tratamientoActual.imagen">
         </div>
 
         <div class="tamano3">
           <label>Nombre Tratamiento:</label>
-          <input type="text" class="form-control" name="nombre" id="EditarimagenSucursal1" required="">
+          <input type="text" class="form-control" name="nombre" id="EditarimagenSucursal1" required=""
+                 #nombre="ngModel" [(ngModel)]="tratamientoActual.nombre">
         </div>
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="editarTratamiento(tratamientoActual)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
@@ -81,11 +87,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="eliminarTratamientoLabel">Esta Seguro que desea eliminar el tratamiento: Nombre</h3>
+        <h3 class="modal-title" id="eliminarTratamientoLabel">Esta Seguro que desea eliminar el tratamiento: {{tratamientoActual.nombre}}</h3>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="eliminarTratamiento(tratamientoActual)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
