--- a/FrontEnd/src/app/Administrador/gestion-servicios/gestion-servicios.component.html
+++ b/FrontEnd/src/app/Administrador/gestion-servicios/gestion-servicios.component.html
@@ -1,19 +1,19 @@
 <button class="btn btn-dark largo" data-bs-toggle="modal" data-bs-target="#agregarServicio">Agregar un nuevo servicio</button>
 
 
-<div class="container">
-  <div class="row">
-    <div class="col col1">
-      <img src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg" alt="">
+<div class="container"*ngFor="let item of listaServicio">
+  <div class="row" >
+    <div class="col col1" >
+      <img src="{{item.imagen}}" alt="">
     </div>
     <div class="col col2">
-      <div class="row"><h3><b>Indentificador</b></h3></div>
-      <div class="row"><label>Descripcion:</label></div>
+      <div class="row"><h3><b>Indentificador: {{item.id}}</b></h3></div>
+      <div class="row"><label>Descripcion: {{item.descripcion}}</label></div>
       <div class="row btn2">
-        <div class="col"><button class="btn btn-primary btn1" data-bs-toggle="modal" data-bs-target="#editarServicio">
-          Editar Servicio</button></div>
-        <div class="col"><button class="btn btn-danger btn2"  data-bs-toggle="modal" data-bs-target="#eliminarServicio">
-          Eliminar Serivicio</button></div>
+        <div class="col"><button class="btn btn-primary btn1" data-bs-toggle="modal" data-bs-target="#editarServicio"
+        (click)="obtenerInformacionItem(item)">Editar Servicio </button></div>
+        <div class="col"><button class="btn btn-danger btn2"  data-bs-toggle="modal" data-bs-target="#eliminarServicio"
+        (click)="obtenerInformacionItem(item)">Eliminar Serivicio</button></div>
       </div>
     </div>
   </div>
@@ -30,23 +30,26 @@
 
         <div class="tamano3">
           <label>Imagen Del Servicio:</label>
-          <input type="text" class="form-control" name="nombre" id="imageServicio" required="">
+          <input type="text" class="form-control" name="nombre" id="imageServicio" required=""
+                 #imagen="ngModel" [(ngModel)]="servicio.imagen">
         </div>
 
         <div class="tamano3">
           <label>Identificador:</label>
-          <input type="text" class="form-control" name="nombre" id="nombreServicio" required="">
+          <input type="text" class="form-control" name="nombre" id="nombreServicio" required=""
+                 #identificador="ngModel" [(ngModel)]="servicio.id">
         </div>
 
         <div class="tamano3">
           <label>Descripcion:</label>
-          <input type="text" class="form-control" name="nombre" id="descripcionSerivicio" required="">
+          <input type="text" class="form-control" name="nombre" id="descripcionSerivicio" required=""
+                 #descripcion="ngModel" [(ngModel)]="servicio.descripcion">
         </div>
 
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="creaServicio(servicio)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
@@ -65,17 +68,19 @@
 
         <div class="tamano3">
           <label>Imagen Del Puesto:</label>
-          <input type="text" class="form-control" name="nombre" id="imagenServicio" required="">
+          <input type="text" class="form-control" name="nombre" id="imagenServicio" required=""
+                 #imagen="ngModel" [(ngModel)]="servicioActual.imagen">
         </div>
 
         <div class="tamano3">
           <label>Descripcion:</label>
-          <input type="text" class="form-control" name="nombre" id="descripcionServicio" required="">
+          <input type="text" class="form-control" name="nombre" id="descripcionServicio" required=""
+                 #descripacion="ngModel" [(ngModel)]="servicioActual.descripcion">
         </div>
 
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="editarServicio(servicioActual)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
@@ -87,11 +92,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="eliminarPuestoLabel">Esta Seguro que desea eliminar el Servicio: Identificador</h3>
+        <h3 class="modal-title" id="eliminarPuestoLabel">Esta Seguro que desea eliminar el Servicio: {{servicioActual.id}}</h3>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" name="7">Aceptar</button>
+        <button type="submit" class="btn btn-primary" name="7" (click)="eliminarServicio(servicioActual)">Aceptar</button>
 
         <button data-bs-dismiss="modal" class="btn btn-danger" name="8">Cancelar</button>
       </div>
